--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+   <h1>首页</h1>
 
     <form>
       <div>用户名<input type="text" name="username" id="username"></div>
@@ -49,7 +48,9 @@
           headers:{'Content-Type':'application/json'}
         })
         const data = await json.json()
-        console.log(data);
+        if(data.code === -1) {
+          location.href = '/login'
+        }
       })
 
       updateBtn.addEventListener('click',async () => {
